// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBanner handle variant prop 1`] = `
<scale-notification-banner opened="">
  <mock:shadow-root>
    <div class="notification-banner notification-banner--has-no-text notification-banner--variant-error" part="notification-banner variant-error has-no-text" tabindex="0">
      <div class="notification-banner__container" part="container">
        <scale-icon-alert-error accessibility-title="error" class="notification-banner__icon-error"></scale-icon-alert-error>
        <div class="notification-banner__heading" part="heading">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-notification-banner>
`;

exports[`NotificationBanner handle variant prop 2`] = `
<scale-notification-banner opened="">
  <mock:shadow-root>
    <div class="notification-banner notification-banner--has-no-text notification-banner--variant-warning" part="notification-banner variant-warning has-no-text" tabindex="0">
      <div class="notification-banner__container" part="container">
        <scale-icon-alert-error accessibility-title="information" class="notification-banner__icon-information" color="#AE461C"></scale-icon-alert-error>
        <div class="notification-banner__heading" part="heading">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-notification-banner>
`;

exports[`NotificationBanner handle variant prop 3`] = `
<scale-notification-banner opened="">
  <mock:shadow-root>
    <div class="notification-banner notification-banner--has-no-text notification-banner--variant-informational" part="notification-banner variant-informational has-no-text" tabindex="0">
      <div class="notification-banner__container" part="container">
        <scale-icon-alert-information accessibility-title="information" class="notification-banner__icon-information"></scale-icon-alert-information>
        <div class="notification-banner__heading" part="heading">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-notification-banner>
`;

exports[`NotificationBanner handle variant prop 4`] = `
<scale-notification-banner opened="">
  <mock:shadow-root>
    <div class="notification-banner notification-banner--has-no-text notification-banner--variant-success" part="notification-banner variant-success has-no-text" tabindex="0">
      <div class="notification-banner__container" part="container">
        <scale-notification-message-svg accessibility-title="success" class="notification-banner__icon-success"></scale-notification-message-svg>
        <div class="notification-banner__heading" part="heading">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-notification-banner>
`;

exports[`NotificationBanner should match snapshot 1`] = `
<scale-notification-banner opened="">
  <mock:shadow-root>
    <div class="notification-banner notification-banner--has-no-text notification-banner--variant-informational" part="notification-banner variant-informational has-no-text" tabindex="0">
      <div class="notification-banner__container" part="container">
        <scale-icon-alert-information accessibility-title="information" class="notification-banner__icon-information"></scale-icon-alert-information>
        <div class="notification-banner__heading" part="heading">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</scale-notification-banner>
`;
